2002-03-19  Michael Meeks  <michael@ximian.com>

	* src/nautilus-zoom-control.c (draw_number):
	use the y_offset to center the number in the
	allocation, while was possible to 'fix' this
	centering by other means, it's not going to handle
	font size or other changes that change the pixel
	height of this toolbar.

	* libnautilus-private/nautilus.schemas: add the
	defaults in here to test.

	* components/music/nautilus-music-view.c
	(nautilus_music_view_init): prune old font bits.
	(set_up_tree_view): handle the font / size
	using Pango & the cell renderers.

	* components/news/nautilus-news.c
	(empty_message_size_allocate): remove, no longer
	neccessary GtkLabel will do the wrapping for us.
	(make_news_view): upd.

2002-03-18  Michael Meeks  <michael@ximian.com>

	* libnautilus-private/nautilus-directory-async.c
	(top_left_start): NULL top_left_text after free.

2002-03-18  Michael Meeks  <michael@ximian.com>

	* src/nautilus-application.c
	(nautilus_application_create_desktop_window):
	guard window creation to avoid re-enterancy, via.
	other shell calls to create windows.

	* src/nautilus-main.c (main): vfs and bonobo init
	is done for us by gnome_program_init.

	* src/nautilus-view-frame.c
	(nautilus_view_frame_selection_changed),
	(send_history): check we have a listener before
	constructing potentially large and slow change
	notifications.

	* configure.in: require bonobo 1.113.0 where we have
	the event source acceleration.

2002-03-17  Darin Adler  <darin@bentspoon.com>

	* configure.in: Bump required versions.

=== nautilus 1.1.10 ===

2002-03-17  Alexander Larsson  <alla@lysator.liu.se>

	* libnautilus-private/nautilus-icon-factory.c (scale_icon):
	Fix typo. Was using x0 instead of y0. Reported by
	Edouard Poor <cs@edouard.info>

	* configure.in:
	Bump version to 1.1.10. Require eel 1.1.8

	* NEWS:
	Bump version

2002-03-15  Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: Added Malay (ms)to ALL_LINGUAS.

2002-03-14  Dave Camp  <dave@ximian.com>
