@@ -2,6 +2,7 @@ icondir = $(datadir)/pixmaps/nautilus
 
 icon_DATA =			\
 	cpu.png			\
+	HD_drive.png		\
 	CD_drive.png		\
 	memory_chip.gif
 
