@@ -1,3 +1,15 @@
+2002-03-19  Alexander Larsson  <alla@lysator.liu.se>
+
+	Patch from Glen Gray <glen@antefacto.com>
+
+	* components/hardware/icons/HD_drive.png:
+	* components/hardware/icons/Makefile.am:
+	Restore old harddrive icon
+	
+	* components/hardware/nautilus-hardware-view.c: (setup_form_title),
+	(setup_overview_form):
+	Use the hardrive icon. Make it look more like the 1.0.x version.
+
 2002-03-19  Michael Meeks  <michael@ximian.com>
 
 	* src/nautilus-zoom-control.c (draw_number):
